--- a/publish.css
+++ b/publish.css
@@ -2,6 +2,8 @@
    VARIABLES
    ========================================= */
 
+   @import url('https://fonts.cdnfonts.com/css/chomsky');
+
    .theme-light {
     --highlight-primary: #020046;;
     --highlight-secondary: #250030;
@@ -11,6 +13,7 @@
     --highlight-cold: #002a35;
     --highlight-bright: #0a3b00;
     --highlight-interesting: #270021;
+    --highlight-design: #360000; 
     --custom-background-primary: #a4a1ff2a;;
     --custom-background-friendly: #d8a2ff44;
     --custom-background-neutral: #ececec3d;
@@ -18,6 +21,7 @@
     --custom-background-cold: #77e4ff48;
     --custom-background-bright: #afff9f42;
     --custom-background-interesting: #ff97ec34;
+    --custom-background-design: #ff62622d;
     --link-color: #337ABE !important;
   }
 
@@ -35,6 +39,8 @@
      --highlight-cold: #5fdfff;
      --highlight-bright: #68ff4a;
      --highlight-interesting: #ff83ea;
+     --highlight-design: #ff6262; 
+     --highlight-combat: #ff6262; 
      --custom-background-primary: #362a004d;
      --custom-background-friendly: #31065034;
      --custom-background-neutral: #292929;
@@ -42,6 +48,8 @@
      --custom-background-cold: #00354244;
      --custom-background-bright: #0d4e0042;
      --custom-background-interesting: #33002a34;
+     --custom-background-design: #3600003a;
+     --custom-background-combat: #3600003a;
   }
 
 
@@ -65,7 +73,6 @@
   .markdown-preview-view h3,
   .markdown-preview-view h4,
   .markdown-preview-view h5 {
-    font-family: 'Chomsky';
     color: var(--highlight-primary);
   }
 
@@ -218,7 +225,7 @@ details[open] > summary h3 {
   /* =========================================
      SPECIFIC COMPONENTS
      ========================================= */
-  .sidebar, .description, .handout, .item, .statblock, .details {
+  .sidebar, .description, .handout, .item, .statblock, .details, .flowchart li {
     border: 4px solid var(--highlight-primary);
     border-radius: 15px;
     padding-left: 25px;
@@ -379,6 +386,13 @@ details[open] > summary h3 {
     --background: var(--custom-background-interesting);
   }
 
+  .callout[data-callout="design"] {
+    --callout-color: 0, 0, 0; 
+    --callout-icon: lucide-wrench;
+    --highlight: var(--highlight-design);
+    --background: var(--custom-background-design);
+  }
+
   .callout {
     border: 4px solid var(--highlight) !important;
     border-radius: 15px !important;
@@ -398,6 +412,37 @@ details[open] > summary h3 {
     color: var(--highlight) !important;
     stroke: var(--highlight) !important;
   }
+
+  .flowchart {
+    display: flex;
+    flex-direction: column; /* makes the layout vertical */
+    list-style-type: none;
+    padding: 0;
+
+}
+
+.flowchart li {
+    margin-bottom: 20px; /* adds space between each box */
+    position: relative; /* needed for positioning the pseudo-elements */
+    padding-top: 25px !important;
+    padding-bottom: 25px !important;    
+}
+
+/* Adding connecting lines */
+.flowchart li::after {
+    content: '';
+    position: absolute;
+    left: 50%; /* aligns the line in the center of the li */
+    bottom: -24px; /* positions the line at the bottom of the li */
+    width: 4px; /* width of the line (make it thicker for vertical lines) */
+    height: 20px; /* length of the line (adjust as needed) */
+    background-color: var(--highlight-primary);
+}
+
+/* Remove line after the last item */
+.flowchart li:last-child::after {
+    display: none;
+}
 
   
   /* =========================================
