--- a/.obsidian/themes/DragnaCarta Theme/theme.css
+++ b/.obsidian/themes/DragnaCarta Theme/theme.css
@@ -393,6 +393,11 @@ details[open] > summary h3 {
     background: var(--custom-background-combat-alt);
   }
 
+  .callout[data-callout="combat"] table th, td:first-child {
+    text-align: center;
+    vertical-align: middle;
+  }
+
   .callout[data-callout="warning"] {
     --highlight: var(--highlight-warning);
     --background: var(--custom-background-warning);
