vertical aligning all columns for combat tables

--- a/.obsidian/themes/DragnaCarta Theme/theme.css
+++ b/.obsidian/themes/DragnaCarta Theme/theme.css
@@ -393,7 +393,8 @@ details[open] > summary h3 {
     background: var(--custom-background-combat-alt);
   }
 
-  .callout[data-callout="combat"] table th, td:first-child {
+  .callout[data-callout="combat"] table th,
+  .callout[data-callout="combat"] table td {
     text-align: center;
     vertical-align: middle;
   }
